Add github url to webapp footer

--- a/src/index_template.html
+++ b/src/index_template.html
@@ -117,6 +117,9 @@
     <hr/>
     <textarea class="emscripten" id="output" rows="8"></textarea>
     <hr>
+    <footer>
+      Author: Q. Zhong, Project GitHub Repo: <a target="_blank" href="https://github.com/12ff54e/FACS">FACS</a>.
+    </footer>
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
       var progressElement = document.getElementById('progress');
